# monthly-dca-signal-bot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: monthly_report.yml
config/: strategy.example.yaml  strategy.yaml
dca_signal_bot/: __init__.py
docs/: github_profile_text.md
reports/: 2026-03-report.md  2026-04-report.md  example-report.md
src/dca_signal_bot/: __init__.py  cli.py  config.py  data_fetcher.py  execution_guidance.py  feishu_sender.py  fx_converter.py  gold_sleeve.py  historical_review.py  indicators.py  presentation.py  report_renderer.py  reserve_state.py  strategy_engine.py
state/: reserve_state.json
tests/: test_cli.py  test_execution_guidance.py  test_feishu_sender.py  test_fx_converter.py  test_gold_sleeve.py  test_indicators.py  test_report_renderer.py  test_strategy_engine.py  test_workflow.py
