[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monthly-dca-signal-bot"
version = "0.1.0"
description = "A reusable monthly DCA signal bot for SPYM and QQQM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "jinja2>=3.1",
  "yfinance>=0.2.40",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dca-signal-bot = "dca_signal_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
